--- a/synthline/index.html
+++ b/synthline/index.html
@@ -12,43 +12,20 @@
   <main class="synth-page">
     <header class="hero">
       <h1 class="title">SYNTHLINE</h1>
-      <p class="subtitle">Limited Edition | Coming Soon</p>
+      <p class="subtitle">Limited Edition</p>
     </header>
 
-    <section class="candle-showcase">
+    <section class="carousel-wrapper">
+      <button class="arrow left" onclick="prevCandle()">&#10094;</button>
 
-      <div class="candle">
-        <div class="candle-img">Neon Nights</div>
-        <p>Electric jasmine & plum under neon skies.</p>
+      <div class="carousel" id="carousel">
+        <!-- JS inserts candle slides here -->
       </div>
 
-      <div class="candle">
-        <div class="candle-img">Dreamdrive</div>
-        <p>Cool ozone & bergamot on midnight roads.</p>
-      </div>
-
-      <div class="candle">
-        <div class="candle-img">Lucid Fuse</div>
-        <p>Pink pepper & vanilla sparks with cedar.</p>
-      </div>
-
-      <div class="candle">
-        <div class="candle-img">Chromafloat</div>
-        <p>Crushed orchid & ambient amber uplift.</p>
-      </div>
-
-      <div class="candle">
-        <div class="candle-img">Hyperlume</div>
-        <p>Lemon drift, mint, and synthetic clarity.</p>
-      </div>
-
-      <div class="candle">
-        <div class="candle-img">Midnight Arcade</div>
-        <p>Hot caramel & cola fizz in velvet glow.</p>
-      </div>
-
+      <button class="arrow right" onclick="nextCandle()">&#10095;</button>
     </section>
   </main>
 
+  <script src="script.js"></script>
 </body>
 </html>
