Added logo and ability to click side candles/visual cues

--- a/synthline/index.html
+++ b/synthline/index.html
@@ -16,7 +16,7 @@
       <p class="subtitle">Limited Edition</p>
     </header>
 
-    <section class="carousel-wrapper">
+    <section class="carousel-wrapper tight">
       <button class="arrow left" onclick="prevCandle()">&#10094;</button>
 
       <div class="carousel" id="carousel"></div>
@@ -24,7 +24,9 @@
       <button class="arrow right" onclick="nextCandle()">&#10095;</button>
     </section>
   </main>
-
+  <footer class="logo-footer">
+    <img src="assets/luxtrila-logo.png" alt="LUXTRILA Logo" />
+  </footer>
   <script src="script.js"></script>
 </body>
 </html>
