Updated mobile settings, cleaned up code, changed border around candle desc

--- a/synthline/index.html
+++ b/synthline/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <div class="background-dim"></div>
+
   <main class="synth-page">
     <header class="hero">
       <h1 class="title">SYNTHLINE</h1>
@@ -16,17 +17,15 @@
       <p class="subtitle">Limited Edition</p>
     </header>
 
-    <section class="carousel-wrapper tight">
-      <button class="arrow left" onclick="prevCandle()">&#10094;</button>
-
+    <section class="carousel-wrapper">
       <div class="carousel" id="carousel"></div>
-
-      <button class="arrow right" onclick="nextCandle()">&#10095;</button>
     </section>
   </main>
+
   <footer class="logo-footer">
     <img src="assets/luxtrila-logo.png" alt="LUXTRILA Logo" />
   </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
