--- a/synthline/index.html
+++ b/synthline/index.html
@@ -19,7 +19,14 @@
 
     <section class="carousel-wrapper">
       <div class="carousel" id="carousel"></div>
+      <div class="dot-container" id="dotContainer"></div>
+      <div class="arrow-controls">
+        <button class="arrow left" id="prevBtn">&#10094;</button>
+        <button class="arrow right" id="nextBtn">&#10095;</button>
+      </div>
     </section>
+
+    <div class="dot-container" id="dotContainer"></div>
   </main>
 
   <footer class="logo-footer">
