--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;700&family=Barlow:wght@300;400&family=Monoton&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;700&family=Barlow:wght@300;400&family=Monoton&family=Orbitron:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Barlow:wght@300;400&display=swap" rel="stylesheet">
 </head>
+
+<!--
 <body>
   <nav class="nav-menu">
     <div class="nav-logo">LUXTRILA</div>
@@ -19,7 +24,8 @@
       <li><a href="/synthline">Synthline</a></li>
     </ul>
   </nav>
-
+-->
+  
   <div id="fog-layer"></div>
   <div id="particles-js"></div>
 
