Added shop page with product labels as placeholders

--- a/index.html
+++ b/index.html
@@ -13,19 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Barlow:wght@300;400&display=swap" rel="stylesheet">
 </head>
 
-<!--
 <body>
-  <nav class="nav-menu">
-    <div class="nav-logo">LUXTRILA</div>
-    <div class="nav-toggle" id="navToggle">&#9776;</div>
-    <ul class="nav-links" id="navLinks">
-      <li><a href="/">Home</a></li>
-      <li><a href="/core">Core Collection</a></li>
-      <li><a href="/synthline">Synthline</a></li>
-    </ul>
-  </nav>
--->
-  
   <div id="fog-layer"></div>
   <div id="particles-js"></div>
 
@@ -41,7 +29,7 @@
         Futuristic blends. Hypnotic glow.<br>
         Designed to signal the senses.
       </p>
-      <h1 class="coming-soon">COMING SOON</h1>
+      <a href="/shop/index.html" class="cta-button">SHOP THE <br> COLLECTION</a>
     </div>
   </div>
 
