--- a/shop/index.html
+++ b/shop/index.html
@@ -10,12 +10,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header class="nav">
-    <div class="nav-logo">LUXTRILA</div>
-    <nav class="nav-links">
-      <a href="/">Home</a>
-    </nav>
-  </header>
+  <div class="nav">
+  <div class="nav-logo">LUXTRILA</div>
+
+  <div class="menu-toggle" id="menuToggle">&#9776;</div>
+
+  <div class="nav-links" id="navLinks">
+    <a href="index.html">Home</a>
+  </div>
+</div>
 
 
   <main class="shop-content">
