Added JS script in HTML

--- a/shop/index.html
+++ b/shop/index.html
@@ -16,7 +16,7 @@
   <div class="menu-toggle" id="menuToggle">&#9776;</div>
 
   <div class="nav-links" id="navLinks">
-    <a href="index.html">Home</a>
+    <a href="/index.html">Home</a>
   </div>
 </div>
 
@@ -108,5 +108,6 @@
   <footer class="footer">
     <p>&copy; 2025 LUXTRILA</p>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
