Added product photos

--- a/shop/index.html
+++ b/shop/index.html
@@ -32,7 +32,7 @@
       <!-- Dream Shard -->
       <div class="product-row">
         <div class="product-image">
-          <img src="assets/dream-shard.png" alt="Dream Shard Candle">
+          <img src="assets/dream-shard-product-shot.jpg" alt="Dream Shard Candle">
         </div>
         <div class="product-info">
           <h3>Dream Shard <span class="line-tag aura">AURA Collection</span></h3>
@@ -59,7 +59,7 @@
       <!-- Terminal Roast -->
       <div class="product-row">
         <div class="product-image">
-          <img src="assets/terminal-roast.png" alt="Terminal Roast Candle">
+          <img src="assets/terminal-roast-product-shot.png" alt="Terminal Roast Candle">
         </div>
         <div class="product-info">
           <h3>Terminal Roast <span class="line-tag noir">NOIR Collection</span></h3>
@@ -73,7 +73,7 @@
       <!-- Stratoberry -->
       <div class="product-row reverse">
         <div class="product-image">
-          <img src="assets/stratoberry.png" alt="Stratoberry Candle">
+          <img src="assets/stratoberry-product-shot.jpg" alt="Stratoberry Candle">
         </div>
         <div class="product-info">
           <h3>Stratoberry <span class="line-tag lumina">LUMINA Collection</span></h3>
@@ -92,7 +92,7 @@
       <!-- Chromafloat -->
       <div class="product-row">
         <div class="product-image">
-          <img src="assets/chromafloat.png" alt="Chromafloat Candle">
+          <img src="assets/chromafloat-product-shot.jpg" alt="Chromafloat Candle">
         </div>
         <div class="product-info">
           <h3>Chromafloat <span class="line-tag synth">SYNTHLINE</span></h3>
