Added Frostbyte product photo

--- a/shop/index.html
+++ b/shop/index.html
@@ -45,7 +45,7 @@
       <!-- Frostbyte -->
       <div class="product-row reverse">
         <div class="product-image">
-          <img src="assets/frostbyte.png" alt="Frostbyte Candle">
+          <img src="assets/frostbyte-product-shot.png" alt="Frostbyte Candle">
         </div>
         <div class="product-info">
           <h3>Frostbyte <span class="line-tag noir">NOIR Collection</span></h3>
