Added multiple product photos and carousel with nav arrows

--- a/shop/index.html
+++ b/shop/index.html
@@ -32,7 +32,11 @@
       <!-- Dream Shard -->
       <div class="product-row">
         <div class="product-image">
-          <img src="assets/dream-shard-product-shot.jpg" alt="Dream Shard Candle">
+          <div class="image-carousel">
+            <button class="carousel-arrow left-arrow">&#10094;</button>
+            <img src="assets/dream-shard-product-shot-2.png" class="carousel-img" alt="Dream Shard Candle">
+            <button class="carousel-arrow right-arrow">&#10095;</button>
+          </div>
         </div>
         <div class="product-info">
           <h3>Dream Shard <span class="line-tag aura">AURA Collection</span></h3>
@@ -45,7 +49,11 @@
       <!-- Frostbyte -->
       <div class="product-row reverse">
         <div class="product-image">
-          <img src="assets/frostbyte-product-shot.png" alt="Frostbyte Candle">
+          <div class="image-carousel">
+            <button class="carousel-arrow left-arrow">&#10094;</button>
+            <img src="assets/frostbyte-product-shot-2.png" class="carousel-img" alt="Frostbyte Candle">
+            <button class="carousel-arrow right-arrow">&#10095;</button>
+          </div>
         </div>
         <div class="product-info">
           <h3>Frostbyte <span class="line-tag noir">NOIR Collection</span></h3>
@@ -59,7 +67,11 @@
       <!-- Terminal Roast -->
       <div class="product-row">
         <div class="product-image">
-          <img src="assets/terminal-roast-product-shot.png" alt="Terminal Roast Candle">
+          <div class="image-carousel">
+            <button class="carousel-arrow left-arrow">&#10094;</button>
+            <img src="assets/terminal-roast-product-shot-2.png" class="carousel-img" alt="Terminal Roast Candle">
+            <button class="carousel-arrow right-arrow">&#10095;</button>
+          </div>
         </div>
         <div class="product-info">
           <h3>Terminal Roast <span class="line-tag noir">NOIR Collection</span></h3>
@@ -73,7 +85,11 @@
       <!-- Stratoberry -->
       <div class="product-row reverse">
         <div class="product-image">
-          <img src="assets/stratoberry-product-shot.jpg" alt="Stratoberry Candle">
+          <div class="image-carousel">
+            <button class="carousel-arrow left-arrow">&#10094;</button>
+            <img src="assets/stratoberry-product-shot.png" class="carousel-img" alt="Stratoberry Candle">
+            <button class="carousel-arrow right-arrow">&#10095;</button>
+          </div>
         </div>
         <div class="product-info">
           <h3>Stratoberry <span class="line-tag lumina">LUMINA Collection</span></h3>
@@ -92,7 +108,11 @@
       <!-- Chromafloat -->
       <div class="product-row">
         <div class="product-image">
-          <img src="assets/chromafloat-product-shot.jpg" alt="Chromafloat Candle">
+          <div class="image-carousel">
+            <button class="carousel-arrow left-arrow">&#10094;</button>
+            <img src="assets/chromafloat-product-shot-4.png" class="carousel-img" alt="Chromafloat Candle">
+            <button class="carousel-arrow right-arrow">&#10095;</button>
+          </div>
         </div>
         <div class="product-info">
           <h3>Chromafloat <span class="line-tag synth">SYNTHLINE</span></h3>
