Testing link to Etsy page

--- a/shop/index.html
+++ b/shop/index.html
@@ -42,7 +42,7 @@
           <h3>Dream Shard <span class="line-tag aura">AURA Collection</span></h3>
           <p class="scent-notes">Sandalwood + Blood Orange + Jasmine</p>
           <p class="product-desc">A lucid blend that grounds and uplifts. Designed for tranquil rituals and neon clarity.</p>
-          <a href="#" class="buy-button">$22.99 | Buy on Etsy</a>
+          <a href="https://www.etsy.com/listing/4305476884/dream-shard-candle-sandalwood-blood" class="buy-button">$22.99 | Buy on Etsy</a>
         </div>
       </div>
 
