Updated all Etsy links

--- a/shop/index.html
+++ b/shop/index.html
@@ -59,7 +59,7 @@
           <h3>Frostbyte <span class="line-tag noir">NOIR Collection</span></h3>
           <p class="scent-notes">Blue Spruce + Vanilla + Cinnamon</p>
           <p class="product-desc">A chilling blend with warm undertones. Built for quiet nights and icy moods.</p>
-          <a href="#" class="buy-button">$22.99 | Buy on Etsy</a>
+          <a href="https://www.etsy.com/listing/4305488604/frostbyte-candle-blue-spruce-cinnamon" class="buy-button">$22.99 | Buy on Etsy</a>
         </div>
       </div>
        
@@ -77,7 +77,7 @@
           <h3>Terminal Roast <span class="line-tag noir">NOIR Collection</span></h3>
           <p class="scent-notes">Fresh Coffee + Sweet Vanilla Caramel + Praline</p>
           <p class="product-desc">Bittersweet nostalgia. This is caffeine in candle form — rich, bold, and smooth.</p>
-          <a href="#" class="buy-button">$24.99 | Buy on Etsy</a>
+          <a href="https://www.etsy.com/listing/4300536769/terminal-roast-candle-coffee-praline" class="buy-button">$24.99 | Buy on Etsy</a>
         </div>
       </div>
       
@@ -95,7 +95,7 @@
           <h3>Stratoberry <span class="line-tag lumina">LUMINA Collection</span></h3>
           <p class="scent-notes">Strawberry + Ozone + Sandalwood</p>
           <p class="product-desc">Crisp and airy with a sweet burst. A playful scent with a clean, grounded finish.</p>
-          <a href="#" class="buy-button">$22.99 | Buy on Etsy</a>
+          <a href="https://www.etsy.com/listing/4305491294/stratoberry-candle-strawberry-ozone" class="buy-button">$22.99 | Buy on Etsy</a>
         </div>
       </div>
       <hr class="candle-rule">
@@ -118,7 +118,7 @@
           <h3>Chromafloat <span class="line-tag synth">SYNTHLINE</span></h3>
           <p class="scent-notes">Pineapple + Muguet + Aquatic</p>
           <p class="product-desc">A juicy, ethereal escape. Tropical air meets floral rhythm — light it and float.</p>
-          <a href="#" class="buy-button">$27.99 | Buy on Etsy</a>
+          <a href="https://www.etsy.com/listing/4300523684/chromafloat-candle-pineapple-aquatic" class="buy-button">$27.99 | Buy on Etsy</a>
         </div>
       </div>
       <hr class="candle-rule">
