--- a/shop/index.html
+++ b/shop/index.html
@@ -41,7 +41,7 @@
         <div class="product-info">
           <h3>Dream Shard <span class="line-tag aura">AURA Collection</span></h3>
           <p class="scent-notes">Sandalwood + Blood Orange + Jasmine</p>
-          <p class="product-desc">A lucid blend that grounds and uplifts. Designed for tranquil rituals and neon clarity.</p>
+          <p class="product-desc"></p>
           <a href="https://www.etsy.com/listing/4305476884/dream-shard-candle-sandalwood-blood" class="buy-button">$22.99 | Buy on Etsy</a>
         </div>
       </div>
@@ -58,7 +58,7 @@
         <div class="product-info">
           <h3>Frostbyte <span class="line-tag noir">NOIR Collection</span></h3>
           <p class="scent-notes">Blue Spruce + Vanilla + Cinnamon</p>
-          <p class="product-desc">A chilling blend with warm undertones. Built for quiet nights and icy moods.</p>
+          <p class="product-desc"></p>
           <a href="https://www.etsy.com/listing/4305488604/frostbyte-candle-blue-spruce-cinnamon" class="buy-button">$22.99 | Buy on Etsy</a>
         </div>
       </div>
@@ -76,7 +76,7 @@
         <div class="product-info">
           <h3>Terminal Roast <span class="line-tag noir">NOIR Collection</span></h3>
           <p class="scent-notes">Fresh Coffee + Sweet Vanilla Caramel + Praline</p>
-          <p class="product-desc">Bittersweet nostalgia. This is caffeine in candle form — rich, bold, and smooth.</p>
+          <p class="product-desc"></p>
           <a href="https://www.etsy.com/listing/4300536769/terminal-roast-candle-coffee-praline" class="buy-button">$24.99 | Buy on Etsy</a>
         </div>
       </div>
@@ -94,7 +94,7 @@
         <div class="product-info">
           <h3>Stratoberry <span class="line-tag lumina">LUMINA Collection</span></h3>
           <p class="scent-notes">Strawberry + Ozone + Sandalwood</p>
-          <p class="product-desc">Crisp and airy with a sweet burst. A playful scent with a clean, grounded finish.</p>
+          <p class="product-desc"></p>
           <a href="https://www.etsy.com/listing/4305491294/stratoberry-candle-strawberry-ozone" class="buy-button">$22.99 | Buy on Etsy</a>
         </div>
       </div>
@@ -117,7 +117,7 @@
         <div class="product-info">
           <h3>Chromafloat <span class="line-tag synth">SYNTHLINE</span></h3>
           <p class="scent-notes">Pineapple + Muguet + Aquatic</p>
-          <p class="product-desc">A juicy, ethereal escape. Tropical air meets floral rhythm — light it and float.</p>
+          <p class="product-desc"></p>
           <a href="https://www.etsy.com/listing/4300523684/chromafloat-candle-pineapple-aquatic" class="buy-button">$27.99 | Buy on Etsy</a>
         </div>
       </div>
