--- a/shop/index.html
+++ b/shop/index.html
@@ -39,10 +39,10 @@
           </div>
         </div>
         <div class="product-info">
-          <h3>Dream Shard <span class="line-tag aura">AURA Collection</span></h3>
+          <h3>Dream Shard</h3>
           <p class="scent-notes">Sandalwood + Blood Orange + Jasmine</p>
           <p class="product-desc"></p>
-          <a href="https://www.etsy.com/listing/4305476884/dream-shard-candle-sandalwood-blood" class="buy-button">$22.99 | Buy on Etsy</a>
+          <a href="https://www.etsy.com/listing/4305476884/dream-shard-candle-sandalwood-blood" class="buy-button">$25.99 | Buy on Etsy</a>
         </div>
       </div>
 
@@ -56,10 +56,10 @@
           </div>
         </div>
         <div class="product-info">
-          <h3>Frostbyte <span class="line-tag noir">NOIR Collection</span></h3>
+          <h3>Frostbyte</h3>
           <p class="scent-notes">Blue Spruce + Vanilla + Cinnamon</p>
           <p class="product-desc"></p>
-          <a href="https://www.etsy.com/listing/4305488604/frostbyte-candle-blue-spruce-cinnamon" class="buy-button">$22.99 | Buy on Etsy</a>
+          <a href="https://www.etsy.com/listing/4305488604/frostbyte-candle-blue-spruce-cinnamon" class="buy-button">$25.99 | Buy on Etsy</a>
         </div>
       </div>
        
@@ -74,10 +74,10 @@
           </div>
         </div>
         <div class="product-info">
-          <h3>Terminal Roast <span class="line-tag noir">NOIR Collection</span></h3>
+          <h3>Terminal Roast</h3>
           <p class="scent-notes">Fresh Coffee + Sweet Vanilla Caramel + Praline</p>
           <p class="product-desc"></p>
-          <a href="https://www.etsy.com/listing/4300536769/terminal-roast-candle-coffee-praline" class="buy-button">$24.99 | Buy on Etsy</a>
+          <a href="https://www.etsy.com/listing/4300536769/terminal-roast-candle-coffee-praline" class="buy-button">$27.99 | Buy on Etsy</a>
         </div>
       </div>
       
@@ -92,10 +92,10 @@
           </div>
         </div>
         <div class="product-info">
-          <h3>Stratoberry <span class="line-tag lumina">LUMINA Collection</span></h3>
+          <h3>Stratoberry</h3>
           <p class="scent-notes">Strawberry + Ozone + Sandalwood</p>
           <p class="product-desc"></p>
-          <a href="https://www.etsy.com/listing/4305491294/stratoberry-candle-strawberry-ozone" class="buy-button">$22.99 | Buy on Etsy</a>
+          <a href="https://www.etsy.com/listing/4305491294/stratoberry-candle-strawberry-ozone" class="buy-button">$25.99 | Buy on Etsy</a>
         </div>
       </div>
       <hr class="candle-rule">
@@ -118,7 +118,7 @@
           <h3>Chromafloat <span class="line-tag synth">SYNTHLINE</span></h3>
           <p class="scent-notes">Pineapple + Muguet + Aquatic</p>
           <p class="product-desc"></p>
-          <a href="https://www.etsy.com/listing/4300523684/chromafloat-candle-pineapple-aquatic" class="buy-button">$27.99 | Buy on Etsy</a>
+          <a href="https://www.etsy.com/listing/4300523684/chromafloat-candle-pineapple-aquatic" class="buy-button">$29.99 | Buy on Etsy</a>
         </div>
       </div>
       <hr class="candle-rule">
