Updated landing page to redirect to Etsy for website redesign

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         Futuristic blends. Hypnotic glow.<br>
         Designed to signal the senses.
       </p>
-      <a href="/shop/index.html" class="cta-button">SHOP THE <br> COLLECTION</a>
+      <a href="https://www.etsy.com/shop/luxtrila/?etsrc=sdt" class="cta-button">SHOP THE <br> COLLECTION</a>
     </div>
   </div>
 
