--- a/index.html
+++ b/index.html
@@ -22,12 +22,9 @@
       <div class="logo-box">
         <img src="assets/luxtrila-logo.png" alt="LUXTRILA Logo" class="logo" />
       </div>
-      <h2 class="tagline">Light the future.</h2>
+      <h2 class="tagline">Light your mood.</h2>
       <div class="glow-line"></div>
       <p class="description">
-        A luxury candle brand for the neon age.<br>
-        Futuristic blends. Hypnotic glow.<br>
-        Designed to signal the senses.
       </p>
       <a href="https://www.etsy.com/shop/luxtrila/?etsrc=sdt" class="cta-button">SHOP THE <br> COLLECTION</a>
     </div>
